testsuite/tests/builtins/print/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ print("Value", to_print="Other")
   │ ────────────────┬───────────────  
   │                 ╰───────────────── The parameter "to_print" has been provided a positional and a named value
───╯
